feat: 'add new articles'

--- a/docs/Detail/01.md
+++ b/docs/Detail/01.md
@@ -1,3 +1,16 @@
-# 前端接受到后端发送的文件如何展示存储
+# 前端如何接受后端发来的文件流并下载
 
-## 
+## 流(Stream Api)的概念
+
+Stream API为Web开发人员提供了一系列的对象来处理来自网络的数据流，并根据开发人员的需要对其进行处理。
+
+### 可读流
+是一个数据源，在JS中用一 ReadableStream对象表示，数据从它的底层源流出
+
+**底层源（表示一个你希望从中获取数据，且来自网络或其他域的某种资源。）**
+
+### 底层源
+**Push source**: 在你访问了它们之后，不断地主动推送数据。你可以自行开始（start）、暂停（pause）或取消（cancel）对流的访问。例如视频流和 TCP/Web socket。
+
+**Pull source**：需要在你连接到它们后，显式地请求数据。例如通过 Fetch 或 XHR 请求访问一个文件。
+
