--- a/docs/Vue/02.md
+++ b/docs/Vue/02.md
@@ -3,4 +3,282 @@
 ## 1.什么是自定义指令
 相较于组件是主要的构建模块，而组合式函数则侧重于有状态的逻辑。自定义指令主要是为了重用涉及普通元素的底层 DOM 访问的逻辑。
 
+## 如何实现
+首先，要实现一个我们自己的指令，主要分为全局指令和局部指令。
+全局注册：通过Vue.directive方法
+```js
+// 注册一个全局自定义指令 `v-focus`
+Vue.directive('focus', {
+  // 当被绑定的元素插入到 DOM 中时……
+  inserted: function (el) {
+    // 聚焦元素
+    el.focus()  // 页面加载完成之后自动让输入框获取到焦点的小功能
+  }
+})
+```
+局部注册：也就是在组件中注册
+
+**情况一：setup中注册：**
+
+```js
+<script setup>
+// 在模板中启用 v-focus
+const vFocus = {
+  mounted: (el) => el.focus()
+}
+{/* 
+el：指令所绑定的元素，可以用来直接操作 DOM
+binding：一个对象，
+包含以下 property：
+  name：指令名，不包括 v- 前缀。
+
+  value：指令的绑定值，例如：
+  v-my-directive="1 + 1" 中，绑定值为 2。
+
+  oldValue：指令绑定的前一个值，仅在  update 和 componentUpdated 钩子中可用。无论值是否改变都可用。
+
+  expression：字符串形式的指令表达式。例如 v-my-directive="1 + 1" 中，表达式为 "1 + 1"。
+
+  arg：传给指令的参数，可选。例如 v-my-directive:foo 中，参数为 "foo"。
+
+  modifiers：一个包含修饰符的对象。例如：v-my-directive.foo.bar 中，修饰符对象为 { foo: true, bar: true }
+
+  vnode：Vue 编译生成的虚拟节点
+
+  oldVnode：上一个虚拟节点，仅在 update 和 componentUpdated 钩子中可用 */}
+
+</script>
+
+<template>
+  <input v-focus />
+</template>
+```
+**情况二：选项式中**
+```js
+export default {
+  setup() {
+    /*...*/
+  },
+  directives: {
+    // 在模板中启用 v-focus
+    focus: {
+      /* ... */
+    }
+  }
+}
+```
+## 如何实现v-model指令
+
+指令原理：
+- v-bind绑定一个value属性
+- v-on监听当前元素的input事件，当数据变化时，将值传递给value实时更新数据
+
+```js
+<script setup>
+const props = defineProps({
+  'modelValue': String,
+})
+const emit = defineEmits(["update:modelValue"])
+</script>
+
+<template>
+    <input :value="modelValue" @input="$emit('update:modelValue', $event.target.value)" />
+</template>
+```
+
 ## 应用场景
+使用自定义指令可以满足我们日常一些场景，这里给出几个自定义指令的案例：
+
+- 表单防止重复提交
+```js
+// 1.设置v-throttle自定义指令
+Vue.directive('throttle', {
+  bind: (el, binding) => {
+    let throttleTime = binding.value; // 节流时间
+    if (!throttleTime) { // 用户若不设置节流时间，则默认2s
+      throttleTime = 2000;
+    }
+    let cbFun;
+    el.addEventListener('click', event => {
+      if (!cbFun) { // 第一次执行
+        cbFun = setTimeout(() => {
+          cbFun = null;
+        }, throttleTime);
+      } else {
+        event && event.stopImmediatePropagation();
+      }
+    }, true);
+  },
+});
+// 2.为button标签设置v-throttle自定义指令
+<button @click="sayHello" v-throttle>提交</button>
+```
+- 图片懒加载
+```js
+const LazyLoad = {
+    // install方法
+    install(Vue,options){
+    	  // 代替图片的loading图
+        let defaultSrc = options.default;
+        Vue.directive('lazy',{
+            bind(el,binding){
+                LazyLoad.init(el,binding.value,defaultSrc);
+            },
+            inserted(el){
+                // 兼容处理
+                if('IntersectionObserver' in window){
+                    LazyLoad.observe(el);
+                }else{
+                    LazyLoad.listenerScroll(el);
+                }
+                
+            },
+        })
+    },
+    // 初始化
+    init(el,val,def){
+        // data-src 储存真实src
+        el.setAttribute('data-src',val);
+        // 设置src为loading图
+        el.setAttribute('src',def);
+    },
+    // 利用IntersectionObserver监听el
+    observe(el){
+        let io = new IntersectionObserver(entries => {
+            let realSrc = el.dataset.src;
+            if(entries[0].isIntersecting){
+                if(realSrc){
+                    el.src = realSrc;
+                    el.removeAttribute('data-src');
+                }
+            }
+        });
+        io.observe(el);
+    },
+    // 监听scroll事件
+    listenerScroll(el){
+        let handler = LazyLoad.throttle(LazyLoad.load,300);
+        LazyLoad.load(el);
+        window.addEventListener('scroll',() => {
+            handler(el);
+        });
+    },
+    // 加载真实图片
+    load(el){
+        let windowHeight = document.documentElement.clientHeight
+        let elTop = el.getBoundingClientRect().top;
+        let elBtm = el.getBoundingClientRect().bottom;
+        let realSrc = el.dataset.src;
+        if(elTop - windowHeight<0&&elBtm > 0){
+            if(realSrc){
+                el.src = realSrc;
+                el.removeAttribute('data-src');
+            }
+        }
+    },
+    // 节流
+    throttle(fn,delay){
+        let timer; 
+        let prevTime;
+        return function(...args){
+            let currTime = Date.now();
+            let context = this;
+            if(!prevTime) prevTime = currTime;
+            clearTimeout(timer);
+            
+            if(currTime - prevTime > delay){
+                prevTime = currTime;
+                fn.apply(context,args);
+                clearTimeout(timer);
+                return;
+            }
+
+            timer = setTimeout(function(){
+                prevTime = Date.now();
+                timer = null;
+                fn.apply(context,args);
+            },delay);
+        }
+    }
+
+}
+export default LazyLoad;
+```
+- 一键 Copy的功能
+```js
+import { Message } from 'ant-design-vue';
+
+const vCopy = { //
+  /*
+    bind 钩子函数，第一次绑定时调用，可以在这里做初始化设置
+    el: 作用的 dom 对象
+    value: 传给指令的值，也就是我们要 copy 的值
+  */
+  bind(el, { value }) {
+    el.$value = value; // 用一个全局属性来存传进来的值，因为这个值在别的钩子函数里还会用到
+    el.handler = () => {
+      if (!el.$value) {
+      // 值为空的时候，给出提示，我这里的提示是用的 ant-design-vue 的提示，你们随意
+        Message.warning('无复制内容');
+        return;
+      }
+      // 动态创建 textarea 标签
+      const textarea = document.createElement('textarea');
+      // 将该 textarea 设为 readonly 防止 iOS 下自动唤起键盘，同时将 textarea 移出可视区域
+      textarea.readOnly = 'readonly';
+      textarea.style.position = 'absolute';
+      textarea.style.left = '-9999px';
+      // 将要 copy 的值赋给 textarea 标签的 value 属性
+      textarea.value = el.$value;
+      // 将 textarea 插入到 body 中
+      document.body.appendChild(textarea);
+      // 选中值并复制
+      textarea.select();
+      // textarea.setSelectionRange(0, textarea.value.length);
+      const result = document.execCommand('Copy');
+      if (result) {
+        Message.success('复制成功');
+      }
+      document.body.removeChild(textarea);
+    };
+    // 绑定点击事件，就是所谓的一键 copy 啦
+    el.addEventListener('click', el.handler);
+  },
+  // 当传进来的值更新的时候触发
+  componentUpdated(el, { value }) {
+    el.$value = value;
+  },
+  // 指令与元素解绑的时候，移除事件绑定
+  unbind(el) {
+    el.removeEventListener('click', el.handler);
+  },
+};
+
+export default vCopy;
+```
+- 页面水印
+```js
+Vue.directive("watermark", (el, binding) => {
+  const addWaterMarker = (text, time, el) => {
+    var canvas = document.createElement("canvas");
+    canvas.width = 400;
+    canvas.height = 200;
+    var cans = canvas.getContext("2d");
+    cans.rotate((-20 * Math.PI) / 180); //旋转弧度
+    cans.font = "16px Microsoft JhengHei"; //字体
+    cans.fillStyle = "rgba(0, 0, 0, 0.1)"; //字体填充颜色
+    cans.textAlign = "left"; //对齐方式
+    cans.textBaseline = "Middle"; //基线
+    cans.fillText(text, canvas.width / 3, canvas.height / 2); //被填充的文本
+    cans.fillText(formatDate(time), canvas.width / 3, 130); //被填充的文本
+    el.style.backgroundImage = `url(${canvas.toDataURL("image/png")})`; //插入背景图
+  };
+  const { text, time } = binding.value;
+  addWaterMarker(text, time, el);
+});
+
+
+
+//调用
+<div id="app" v-watermark="{text:'掘金',time:Date.now()}"></div>
+```
