feat: end Vue article

--- a/docs/Javascript/04.md
+++ b/docs/Javascript/04.md
@@ -5,7 +5,7 @@
 - 引用数据类型：保存在**堆**内存中，引用数据类型的变量是一个指向堆内存中实际对象的引用，存在栈中
 
 ## 浅拷贝
-浅拷贝，指的是创建新的数据，这个数据有着原始数据属性值的一份精确拷贝
+浅拷贝，指的是创建新的数据，这个数据有着**原始数据属性值**的一份精确拷贝，也就是仅仅拷贝原始值
 
 如果属性是基本类型，拷贝的就是基本类型的值。如果属性是引用类型，拷贝的就是内存地址
 
@@ -26,6 +26,7 @@ function shallowClone(obj) {
 // 法二
 Object.assign()
 ```
+
 
 ## 深拷贝
 
