--- a/docs/Vue/05.md
+++ b/docs/Vue/05.md
@@ -1,3 +1,20 @@
 # Vue2和Vue3的区别
 
-## 
+## 实际开发使用上区别
+具体自己聊
+## 性能提升方面
+重写了虚拟Dom实现
+
+编译模板的优化
+
+更高效的组件初始化
+
+undate性能提高1.3~2倍
+
+SSR速度提高了2~3倍
+
+
+## 其他
+
+1. 体积更小：通过webpack的tree-shaking功能，可以将无用模块“剪辑”，仅打包需要的
+2. compositon Api：灵活的逻辑组合与复用
