--- a/docs/Vue/03.md
+++ b/docs/Vue/03.md
@@ -6,7 +6,7 @@
 - 添加全局方法或者属性。如: vue-custom-element
 - 添加全局资源：指令/过滤器/过渡等。如 vue-touch
 - 通过全局混入来添加一些组件选项。如vue-router
-- 添加 Vue 实例方法，通过把它们添加到 Vue.prototype 上实现。
+- 添加 Vue 实例方法，通过把它们添加到 Vue.prototype 上实现
 - 一个库，提供自己的 API，同时提供上面提到的一个或多个功能。如vue-router
 ```js
 import { createApp } from 'vue'
