--- a/docs/Vue/04.md
+++ b/docs/Vue/04.md
@@ -3,5 +3,12 @@
 ## 生命周期图示
 ![lifecycle](./img/01.png)
 
-## 生命周期钩子函数介绍
-###
+## 生命周期钩子函数介绍及使用场景
+- beforeCreate： 执行时组件实例还未创建，通常用于插件开发中执行一些初始化任务
+- created：组件初始化完毕，各种数据可以使用，常用于异步数据获取
+- beforeMount： 未执行渲染、更新，dom未创建
+- mounted：初始化结束，dom已创建，可用于获取访问数据和dom元素
+- beforeUpdate：更新前，可用于获取更新前各种状态
+- updated：更新后，所有状态已是最新
+- beforeDestroy：销毁前，可用于一些定时器或订阅的取消
+- destroyed：组件已销毁，作用同上
