--- a/docs/Network/04.md
+++ b/docs/Network/04.md
@@ -66,3 +66,9 @@ All cases in CSS where a url() value is used (@font-face, cursor, background-ima
 <object> (data attribute)
   Navigator.sendBeacon (url attribute)
 ```
+
+## 参考
+
+[w3c mixed-content](https://w3c.github.io/webappsec-mixed-content/#mixed-content)
+
+[mdn mixed-content](https://developer.mozilla.org/en-US/docs/Web/Security/Mixed_content)
