feat: add new articles

--- a/docs/Javascript/03.md
+++ b/docs/Javascript/03.md
@@ -3,6 +3,7 @@
 ## 什么是防抖，什么是节流
 
 **节流**：n秒内运行一次，若在n秒内重复触发，只运行一次
+
 **防抖**: n秒后执行该事件，若在n秒内重复触发，则重新记时
 
 ## 节流代码实现
@@ -52,3 +53,7 @@ function debounce(func, wait) {
 - 搜索框，用户一次性输入完，再发送请求
 - 手机号、邮箱验证输入检测
 - 窗口大小resize。防止重复渲染
+
+## 如何保证防抖函数无论怎样最后都会执行一次
+
+答案：在防抖函数中加入节流函数
