--- a/docs/Javascript/04.md
+++ b/docs/Javascript/04.md
@@ -11,6 +11,8 @@
 
 即浅拷贝是拷贝一层，深层次的引用类型则共享内存地址
 
+修改一个对象的属性，**会**改变另一个对象的属性
+
 下面简单实现一个浅拷贝
 ```js
 // 法一
@@ -30,7 +32,7 @@ Object.assign()
 
 ## 深拷贝
 
-深拷贝开辟一个新的栈，两个对象属完成相同，但是对应两个不同的地址，修改一个对象的属性，不会改变另一个对象的属性
+深拷贝开辟一个新的栈，两个对象属完成相同，但是对应两个不同的地址，修改一个对象的属性，**不会**改变另一个对象的属性
 
 ### 深拷贝方式
 - 第三方库
