--- a/docs/Javascript/09.md
+++ b/docs/Javascript/09.md
@@ -1,1 +1,15 @@
 # 事件循环
+
+## JS任务分类
+
+由于JavaScript是一门单线程的语言，为了不阻塞执行，所以产生了事件循环的概念。
+
+那么一个JavaScript任务可以分为一下几类：
+
+同步任务：立即执行的任务
+
+异步任务：异步执行的任务
+
+- 微任务
+
+- 宏任务
