--- a/docs/Javascript/09.md
+++ b/docs/Javascript/09.md
@@ -1,15 +1,8 @@
 # 事件循环
 
-## JS任务分类
+## 前言
 
-由于JavaScript是一门单线程的语言，为了不阻塞执行，所以产生了事件循环的概念。
+事件循环机制，一个比较好的视角是我们可以从语言的发展历史来观察，并弄明白以下问题：
 
-那么一个JavaScript任务可以分为一下几类：
-
-同步任务：立即执行的任务
-
-异步任务：异步执行的任务
-
-- 微任务
-
-- 宏任务
+1. 事件循环这个机制为什么会存在(为什么会被创造出来)
+2. 
