--- a/docs/Browser/04.md
+++ b/docs/Browser/04.md
@@ -1,6 +1,6 @@
 # 浏览器从输入网址到页面展示的过程
 
-## 关键点
+## 关键信息点
 - URL 输入
 - DNS 解析
 - 建立 TCP 连接
@@ -27,3 +27,17 @@
 5. 本地 DNS 服务器发送查询报文至根 DNS 服务器，根 DNS 服务器收到请求后，用顶级域 DNS 服务器地址进行响应。
 6. 本地 DNS 服务器发送查询报文至顶级域 DNS 服务器。顶级域 DNS 服务器收到请求后，用权威 DNS 服务器地址进行响应。
 7. 本地 DNS 服务器发送查询报文至权威 DNS 服务器，权威 DNS 服务器收到请求后，用 目标网站的 IP 地址进行响应，完成域名解析。
+
+## 3.建立TCP连接
+
+
+## 4.发送 HTTP / HTTPS 请求（建立 TLS 连 接）
+
+
+## 5.服务器响应请求
+
+
+## 6.浏览器解析渲染页面
+
+
+## 7.HTTP 请求结束，断开 TCP 连接
